<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.example.bakingapp.ui.recipeDetails.StepsListFragment"
    android:id="@+id/fragment_step_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recipeDetails.RecipeDetailsActivity">

</fragment>